Fixed #55 chnage visibility of navbar active tag

--- a/src/assets/stylesheets/style.css
+++ b/src/assets/stylesheets/style.css
@@ -463,3 +463,12 @@ body {
   margin-top: 50px;
 }
 
+#fluid-web-nav li:first-child a {
+  color: yellow;
+  text-decoration: underline;
+}
+
+#fluid-web-nav li:first-child a:hover {
+  background-color: #000;
+  color: #fff;
+}
